[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/player_area2d_standard_mode_linha.gd" type="Script" id=1]
[ext_resource path="res://SFX/Laser_Shoot.wav" type="AudioStream" id=2]
[ext_resource path="res://Textures/pasta_sprite_fixed.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 27 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 13, 23 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 13, 19 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 13, 15 )

[node name="player" type="Area2D"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Tiro"

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 0, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 6
hframes = 4
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform" ]

[node name="0" type="CollisionShape2D" parent="." index="2"]

visible = false
shape = SubResource( 1 )

[node name="1" type="CollisionShape2D" parent="." index="3"]

visible = false
position = Vector2( 0, -4 )
shape = SubResource( 2 )
disabled = true

[node name="2" type="CollisionShape2D" parent="." index="4"]

visible = false
position = Vector2( 0, -8 )
shape = SubResource( 3 )
disabled = true

[node name="3" type="CollisionShape2D" parent="." index="5"]

visible = false
position = Vector2( 0, -12 )
shape = SubResource( 4 )
disabled = true

[node name="timer_para_poder_atacar_de_novo" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="topo_cima" type="Position2D" parent="." index="7"]

position = Vector2( 0, -20 )

[node name="topo_baixo" type="Position2D" parent="." index="8"]

position = Vector2( 0, 26 )

[node name="topo_baixo2" type="Position2D" parent="." index="9"]

position = Vector2( 0, 18 )

[node name="topo_baixo3" type="Position2D" parent="." index="10"]

position = Vector2( 0, 12 )

[node name="topo_baixo4" type="Position2D" parent="." index="11"]

position = Vector2( 0, 4 )

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]

[connection signal="timeout" from="timer_para_poder_atacar_de_novo" to="." method="_on_timer_para_poder_atacar_de_novo_timeout"]


